fixed the collapse menu by adding a classes to its div

--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body {
   background-color: #34507f !important;
 }
 
+.mayce {
+  display: flex;
+  
+}
+
 SVG {
   color: white;
 }
